actualizando el codigo

--- a/ProyectoRom/Plantilla/Login.html
+++ b/ProyectoRom/Plantilla/Login.html
@@ -2,5 +2,23 @@
 
 {% load static %}
 {% block ContendidoqueCambia%}
-<h1> En esta pagina se veria un sistema de inicio de sesion </h1>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible"
+     content = "IE=edge">
+    <meta name ="viewport" content="width=device-width,
+    initial-scale=1.0">
+    <title> Formulario - Agregar Usuario </title>
+ </head>
+ <body>
+    <form action="/login/" method = "POST">
+    <p>Nombre: <input type = "text" name = "nombre"></p>
+    <p>Email: <input type = "text" name = "email"></p>
+    <p>Contra: <input type = "text" name = "contraseña"></p>
+    <input type="submit" value="Enviar">
+    </form>
+ </body>
+ </html>
 {% endblock %}
