--- a/ProyectoRom/Plantilla/Home.html
+++ b/ProyectoRom/Plantilla/Home.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <a class="navbar-brand" href="{% url 'home' %}">home</a>
                 <a class="navbar-brand" href="{% url 'roms' %}">roms</a>
-                <a class="navbar-brand" href="{% url 'login' %}">logins</a>
+                <a class="navbar-brand" href="{% url 'login' %}">login</a>
                 <a class="navbar-brand" href="{% url 'emuladores' %}">emuladores</a>
                 <a class="btn btn-primary" href="#NADAAUN">INICIAR</a>
                
