corrijo el error por el cual no podia subir el trabajo

--- a/ProyectoRom/Plantilla/Home.html
+++ b/ProyectoRom/Plantilla/Home.html
@@ -21,6 +21,7 @@
                 <a class="navbar-brand" href="{% url 'home' %}">home</a>
                 <a class="navbar-brand" href="{% url 'roms' %}">roms</a>
                 <a class="navbar-brand" href="{% url 'login' %}">login</a>
+                <a class="navbar-brand" href="{% url 'ejemploformulario' %}">ejemploformulario</a>
                 <a class="navbar-brand" href="{% url 'emuladores' %}">emuladores</a>
                 <a class="btn btn-primary" href="#NADAAUN">INICIAR</a>
                
