--- a/ProyectoRom/Plantilla/Login1.html
+++ b/ProyectoRom/Plantilla/Login1.html
@@ -1,7 +1,12 @@
+
+
+
+
 {% extends 'Home.html' %}
 
 {% load static %}
 {% block ContendidoqueCambia%}
+<h1>Esto es lo que aparece en login </h1>
  <!DOCTYPE html>
  <html lang="en">
  <head>
@@ -19,6 +24,7 @@
     <p>Contra: <input type = "text" name = "contraseña"></p>
     <input type="submit" value="Enviar">
     </form>
+    <h1>blublublu</h1>
  </body>
  </html>
 {% endblock %}
